...
        rootView = TitleScreen(
            imageName: imageName,
            answerText: quiz.answer,
            onStart: { [weak self] in self?.quizStart() }
        )

        title = "だれのあし？"
        navigationItem.hidesBackButton = true
        navigationItem.largeTitleDisplayMode = .never
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            image: UIImage(named: "information"),
            style: .plain,
            target: self,
            action: #selector(showInformation)
        )
    }

...
